2003-08-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/config_files.imdoc: Started documentation for configuration
	files.
	* magick/xwindow.c (XSignalHandler): Ensure that segment_info is
	non-null before attempting to use it.  Much thanks to John Cristy
	for bringing this problem to our attention.

2003-08-05  William Radcliffe  <billr@corbis.com>

	* coders/locale.c: Added several new formats to this coder to
	generate windows message resource format messages and also to
	generates a new header file format that will support a table based
	version of the other magick/locale.c.
	* coders/xtrn.c: Minor code cleanup

2003-08-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Only configure C and C++ libtool tags.
	* PerlMagick/t/reference/composite/*.miff: Added some composition
	test reference images.  These reference images will serve as
	placeholders until better composition tests can be figured out.
	It is not clear from the documentation what some of the
	composition operators are supposed to do.

2003-08-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* README.txt: Add documentation regarding using TRIO.
	* configure.ac: Test for TRIO library if vsnprintf is not
	available.
	* magick/studio.h: Remap vsnprintf to trio_vsnprintf if TRIO is
	available.
	* coders/topol.c, coders/wmf.c, magick/magick.c, magick/nt_base.c,
	magick/resource.c: Use traditional C comment form in C source
	files.

2003-07-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/log.h (LogEventType::AllEvents): Increase the value of
	AllEvents so that it spans the complete positive range of a signed
	integer.
	* magick/xwindow.c, magick/xwindow.h: Incorporate patch from John
	Cristy's ImageMagick to eliminate conditional dependence of
	magick/xwindow.h on <X11/extensions/XShm.h>.
	* magick/magick_config_api.h.in: HasSharedMemory define no longer
	needed.

2003-07-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
