@@ -168,6 +168,31 @@ The licences which components of this software fall under are as follows.
   that this copyright notice remain intact.
 
 7)
+  The documentation for the composition operators is copied from the
+  rlecomp manual page, which is authored by Rod Bogart and John W.
+  Peterson. Rlecomp is part of the Utah Raster Toolkit distributed by the
+  University of Michigan and the University of Utah. The copyright for
+  this manual page is as follows:
+
+  Copyright (c) 1986, University of Utah
+  
+  This software is copyrighted as noted below.  It may be freely copied,
+  modified, and redistributed, provided that the copyright notice is 
+  preserved on all copies.
+  
+  There is no warranty or other guarantee of fitness for this software,
+  it is provided solely "as is".  Bug reports or fixes may be sent
+  to the author, who may or may not act on them as he desires.
+  
+  You may not include this software in a program or other software product
+  without supplying the source, or without informing the end-user that the 
+  source is available for no extra charge.
+  
+  If you modify this software, you should include a notice giving the
+  name of the person performing the modification, the date of modification,
+  and the reason for such modification.
+
+8)
   The C++ API known as "Magick++", and which resides in the Magick++
   directory, is distributed under the following license:
 
@@ -194,7 +219,7 @@ The licences which components of this software fall under are as follows.
   contract, tort or otherwise, arising from, out of or in connection
   with Magick++ or the use or other dealings in Magick++.
 
-8)
+9)
   GraphicsMagick makes use of third-party "delegate" libraries to
   support certain optional features. These libraries bear their own
   copyrights and licenses, which may be more or less restrictive than the
