@@ -56,6 +56,8 @@
 2003-08-05  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> Copyright.txt: Added missing copyright notice which is required
+        due to copying the rlecomp manual page into ImageMagick.
   <LI> doc/config_files.imdoc: Started documentation for configuration
         files.<BR>
   <LI> magick/xwindow.c (XSignalHandler): Ensure that segment_info is
