@@ -6,7 +6,7 @@
 	<META NAME="GENERATOR" CONTENT="StarOffice 6.0  (Solaris Sparc)">
 	<META NAME="CREATED" CONTENT="20030326;17011400">
 	<META NAME="CHANGEDBY" CONTENT="Bob Friesenhahn">
-	<META NAME="CHANGED" CONTENT="20030714;12250700">
+	<META NAME="CHANGED" CONTENT="20030805;18014900">
 	<STYLE>
 	<!--
 		TD P { color: #000000; font-family: "Verdana", "Arial", "Helvetica", sans-serif; font-size: 14pt }
@@ -242,6 +242,45 @@ distribute, sublicense, and/or sell copies of the Software, and to
 permit persons who receive copies from any such party to do so, with
 the only requirement being that this copyright notice remain intact.</P>
 <P><B>7)</B></P>
+<P>The documentation for the composition operators is copied from the
+<B>rlecomp</B> manual page, which is authored by Rod Bogart and John
+W. Peterson. <B>Rlecomp</B> is part of the Utah Raster Toolkit
+distributed by the University of Michigan and the University of Utah.
+The copyright for this manual page is as follows:</P>
+<P STYLE="margin-bottom: 0in">Copyright (c) 1986, University of Utah</P>
+<P STYLE="margin-bottom: 0in">  
+</P>
+<P STYLE="margin-bottom: 0in">This software is copyrighted as noted
+below.  It may be freely copied,</P>
+<P STYLE="margin-bottom: 0in">modified, and redistributed, provided
+that the copyright notice is 
+</P>
+<P STYLE="margin-bottom: 0in">preserved on all copies.</P>
+<P STYLE="margin-bottom: 0in">  
+</P>
+<P STYLE="margin-bottom: 0in">There is no warranty or other guarantee
+of fitness for this software,</P>
+<P STYLE="margin-bottom: 0in">it is provided solely &quot;as is&quot;.
+ Bug reports or fixes may be sent</P>
+<P STYLE="margin-bottom: 0in">to the author, who may or may not act
+on them as he desires.</P>
+<P STYLE="margin-bottom: 0in">  
+</P>
+<P STYLE="margin-bottom: 0in">You may not include this software in a
+program or other software product</P>
+<P STYLE="margin-bottom: 0in">without supplying the source, or
+without informing the end-user that the 
+</P>
+<P STYLE="margin-bottom: 0in">source is available for no extra
+charge.</P>
+<P STYLE="margin-bottom: 0in">  
+</P>
+<P STYLE="margin-bottom: 0in">If you modify this software, you should
+include a notice giving the</P>
+<P STYLE="margin-bottom: 0in">name of the person performing the
+modification, the date of modification,</P>
+<P>and the reason for such modification.</P>
+<P><B>8)</B></P>
 <P>The C++ API known as &quot;Magick++&quot;, and which resides in
 the Magick++ directory, is distributed under the following license: 
 </P>
@@ -269,7 +308,7 @@ claim, damages or other liability, whether in an action of contract,
 tort or otherwise, arising from, out of or in connection with
 Magick++ or the use or other dealings in Magick++. 
 </P>
-<P STYLE="margin-bottom: 0in"><B>8)</B></P>
+<P STYLE="margin-bottom: 0in"><B>9)</B></P>
 <P STYLE="margin-bottom: 0in">GraphicsMagick makes use of third-party
 &quot;delegate&quot; libraries to support certain optional features.
 These libraries bear their own copyrights and licenses, which may be
